# -*- coding: utf-8 -*-

[package]
edition             = "2021"
name                = "range-lock"
description         = "Range lock for std::vec::Vec"
version             = "0.2.3"
authors             = ["Michael Büsch <m@bues.ch>"]
license             = "MIT OR Apache-2.0"
readme              = "README.md"
repository          = "https://bues.ch/cgit/rangelockrs.git"
rust-version        = "1.75"

categories          = ["concurrency", "algorithms"]
keywords            = ["mutex", "lock", "range"]

# vim: ts=4 sw=4 expandtab
